# browserve

./: .gitignore  README.md  pyproject.toml
src/browserve/: __init__.py  exceptions.py
src/browserve/actions/: __init__.py  base.py  interaction.py
src/browserve/core/: __init__.py  logger.py  page.py
src/browserve/events/: __init__.py  base.py  filters.py  handlers.py
src/browserve/models/: __init__.py  config.py  results.py
src/browserve/utils/: __init__.py  validation.py
src/tests/: __init__.py  run_e2e_tests.py  test_action_framework.py  test_config.py  test_e2e_integration.py  test_events.py  test_exceptions.py  test_logger.py  test_page.py  test_validation.py
